--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,33 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <li class="">
+        <%= link_to "Home", "#" %>
+      </li>
+      <li class="">
+        <%= link_to 'Users', "#" %>
+      </li>
+      <li class="">
+        <%= link_to 'Books', books_path %>
+      </li>
+      <li class="">
+        <%= link_to "logout",  destroy_user_session_path, method: :delete  %>
+      </li>
+    <% else %>
+      <li class="">
+        <%= link_to "Home", root_path %>
+      </li>
+      <li class="">
+        <%= link_to 'About', "#" %>
+      </li>
+      <li class="">
+        <%= link_to 'sign up', new_user_registration_path %>
+      </li>
+      <li class="">
+        <%= link_to "login", new_user_session_path %>
+      </li>
+    <% end %>
     <%= yield %>
   </body>
 </html>
